2009-12-04  Matthias Klose  <doko@ubuntu.com>             John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

PR target/40134
        * config.gcc (hppa*-*-linux*): Use config/t-slibgcc-libgcc.
        * config/pa/pa-linux.h (LIB_SPEC): Remove.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@154973 138bc75d-0d04-0410-961f-82ee72b054a4